--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,19 @@
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%# <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
+      <div id="wrapper">
+       <%= render 'partial/navbar' if current_user %>
 
-    <%= render 'partial/navbar' %>
-
-    <%= yield %>
+       <% if flash[:notice] %>
+         <div class="alert alert-info"><%= flash[:notice] %></div>
+       <% end %>
+       <% if flash[:alert] %>
+         <div class="alert alert-danger"><%= flash[:alert] %></div>
+       <% end %>
+       <%= yield %>
+       <%= render 'partial/footer' %>
+  </div>
   </body>
 </html>
 
