--- a/app/assets/stylesheets/layouts/navbar.scss
+++ b/app/assets/stylesheets/layouts/navbar.scss
@@ -1,4 +1,3 @@
-
 .navbar {
   background-color: #fff;
   border-bottom: 1px solid rgba(0, 0, 0, .0975);
@@ -14,9 +13,9 @@
   }
   &-nav {
     & > li {
-      margin-right: 20px;
+      margin-left: 20px;
       &:first-child {
-        margin-right: 0;
+        margin-left: 0;
       }
       .commonNavIcon {
         height: 24px;
