--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,24 +4,52 @@
     <title>Recipe-posting</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%# <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-      <div id="wrapper">
-       <%= render 'partial/navbar' if current_user %>
-
-       <% if flash[:notice] %>
-         <div class="alert alert-info"><%= flash[:notice] %></div>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container">
+          <%= link_to "", root_path, class: "navbar__brand navbar__mainLogo" %>
+        <div class="right">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-md-auto align-items-center">
+              <li>
+                <%= link_to "投稿", "#", class: "btn btn-primary" %>
+              </li>
+              <li>
+                <%= link_to "", "#", class: "nav-link commonNavIcon profile-icon" %>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    
+    <%# <%= render 'partial/navbar' %>
+    <div id="wrapper">
+      <%= render 'partial/navbar' if current_user %>
+      <% if flash[:notice] %>
+         <div class="alert alert-info">
+         <%= flash[:notice] %>
+         </div>
        <% end %>
        <% if flash[:alert] %>
-         <div class="alert alert-danger"><%= flash[:alert] %></div>
+         <div class="alert alert-danger">
+         <%= flash[:alert] %>
+         </div>
        <% end %>
-       <%= yield %>
-       <%= render 'partial/footer' %>
-  </div>
+       <div class="container">
+        <%= yield %>
+       </div>
+      <%= render 'partial/footer' %>
+    </div>
   </body>
 </html>
 
